updates toward finality

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "prop-types": "^15.6.2",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "smooth-scroll": "^16.0.3"
   },
   "scripts": {
     "build": "gatsby build",
