--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-helmet": "^5.2.0",
+    "react-scrollable-anchor": "^0.6.1",
     "smooth-scroll": "^16.0.3"
   },
   "scripts": {
