--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
-    "react-helmet": "^5.2.0",
-    "react-scrollable-anchor": "^0.6.1",
-    "smooth-scroll": "^16.0.3"
+    "react-helmet": "^5.2.0"
   },
   "scripts": {
     "build": "gatsby build",
