--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
+    "react-hammerjs": "^1.0.1",
     "react-helmet": "^5.2.0"
   },
   "scripts": {
